# RoboMaster2021_Engineer

./: CMakeLists.txt  README.md  main.cpp
barrier/: uvc_v4l2.cpp
barrier/include/: barrier.h
barrier/src/: run.cpp
barrier/src/detect/: detect_single.cpp
barrier/src/get/: get_fit_points.cpp
barrier/src/init/: init_barrier.cpp
com/include/: datatypes.h  rmserial.h
com/include/serial/: serial.h
com/include/serial/impl/: unix.h  win.h
com/src/: datatypes.cpp  rmserial.cpp  serial.cpp
com/src/impl/: unix.cpp
com/src/impl/list_ports/: list_ports_linux.cpp
flash/: run.cpp
flash/include/: flash.h
flash/src/detect/: detect_flash.cpp
flash/src/init/: init_flash.cpp
headers/: options.h  parameter.h
mineral/: run.cpp
mineral/include/: mineral.h
mineral/src/: detect_line.cpp  detect_mineral.cpp  select_ROI.cpp
mineral/src/detect/: detect_mineral.cpp  detect_mineral_high.cpp  detect_mineral_white.cpp  detect_mineral_yellow.cpp
mineral/src/get/: get_fit_points.cpp  get_send_data.cpp
mineral/src/init/: init_mineral.cpp
mineral/src/locate/: locate_high_mineral.cpp
mineral/src/mor/: mor_dropped_yellow_mineral.cpp  mor_of_mineral_high.cpp  mor_white_mineral.cpp
mineral/src/send/: send_high_mineral.cpp  send_target.cpp
mineral/src/tool/: gamma_transform.cpp  sort.cpp
rmconfig/: parameter.h  rmconfig.h  uvc_v4l2.h
tools/sort/: sort_points_vector.cpp
